noinst_HEADERS = \
	abis_nm.h \
	abis_om2000.h \
	abis_rsl.h \
	arfcn_range_encode.h \
	auth.h \
	bsc_msc.h \
	bsc_msg_filter.h \
	bsc_nat.h \
	bsc_nat_callstats.h \
	bsc_nat_sccp.h \
	bsc_rll.h \
	bsc_subscriber.h \
	bss.h \
	bts_ipaccess_nanobts_omlattr.h \
	chan_alloc.h \
	common_bsc.h \
	common_cs.h \
	crc24.h \
	ctrl.h \
	db.h \
	debug.h \
	e1_config.h \
	gb_proxy.h \
	gprs_gb_parse.h \
	gprs_gmm.h \
	gprs_llc.h \
	gprs_llc_xid.h \
	gprs_sgsn.h \
	gprs_sndcp.h \
	gprs_sndcp_comp.h \
	gprs_sndcp_dcomp.h \
	gprs_sndcp_pcomp.h \
	gprs_sndcp_xid.h \
	gprs_subscriber.h \
	gprs_utils.h \
	gsm_04_08.h \
	gsm_04_11.h \
	gsm_04_80.h \
	gsm_data.h \
	gsm_data_shared.h \
	gsm_subscriber.h \
	gsup_client.h \
	gtphub.h \
	handover.h \
	handover_decision.h \
	ipaccess.h \
	iu.h \
	meas_feed.h \
	meas_rep.h \
	mgcp.h \
	mgcp_internal.h \
	mgcp_transcode.h \
	misdn.h \
	mncc.h \
	mncc_int.h \
	nat_rewrite_trie.h \
	network_listen.h \
	oap_client.h \
	openbscdefines.h \
	osmo_bsc.h \
	osmo_bsc_grace.h \
	osmo_bsc_rf.h \
	osmo_msc.h \
	bsc_msc_data.h \
	osmux.h \
	paging.h \
	pcu_if.h \
	pcuif_proto.h \
	rest_octets.h \
	rrlp.h \
	rs232.h \
	rtp_proxy.h \
	sgsn.h \
	signal.h \
	silent_call.h \
	slhc.h \
	smpp.h \
	sms_queue.h \
	socket.h \
	system_information.h \
	token_auth.h \
	transaction.h \
	trau_mux.h \
	trau_upqueue.h \
	ussd.h \
	vlr.h \
	vty.h \
	v42bis.h \
	v42bis_private.h \
	$(NULL)

openbsc_HEADERS = \
	bsc_api.h \
	gsm_04_08.h \
	meas_rep.h \
	$(NULL)

# DO NOT add a newline and '$(NULL)' to this line. That would add a trailing
# space to the directory installed: $prefix/include/'openbsc '
openbscdir = $(includedir)/openbsc
